Socrates: Colores, webfont, boton de imagen removido

--- a/Modulo Analisis De Datos/ConversaContuData.html
+++ b/Modulo Analisis De Datos/ConversaContuData.html
@@ -56,7 +56,7 @@
             <div class="container-fluid d-flex flex-column p-0">
                 <a class="navbar-brand align-items-center justify-content-xxl-end align-items-xxl-center sidebar-brand m-0" href="PaginaPrincipal.html">
                     <div class="sidebar-brand-icon rotate-n-15"><img data-bs-toggle="tooltip" data-bss-tooltip="" class="mx-auto d-none d-md-block" src="assets/img/NegroLogo.png" width="145" height="105" style="transform: rotate(23deg);width: 186px;height: 74px;"></div>
-                    <div class="sidebar-brand-text mx-3"><span data-bs-toggle="tooltip" data-bss-tooltip="" style="font-family: 'IBM Plex Sans', sans-serif;color: #072934;">Cheetah Research</span></div>
+                    <div class="sidebar-brand-text mx-3"><span data-bs-toggle="tooltip" data-bss-tooltip="" style="font-family: hedliner;color: #072934;">Cheetah Research</span></div>
                 </a>
                 <div class="d-xl-flex align-items-xxl-start" style="position: sticky;height: 89px;"></div>
                 <ul class="navbar-nav text-light" id="accordionSidebar">
@@ -81,24 +81,24 @@
 
 
 
-                <div class="container-fluid d-flex flex-row justify-content-start align-items-center align-content-center" id="Header-BG" style="height: 8%;width: 100%;background: #0f191fdc;backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
+                <div class="container-fluid d-flex flex-row justify-content-start align-items-center align-content-center" id="Header-BG" style="height: 8%;width: 100%;background: #0a0a0adc;backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
                     <div class="row d-flex flex-column justify-content-center align-content-center" style="height: 100%;">
                         <div class="col d-flex flex-column justify-content-center align-content-center" style="height: 100%;padding-right: 8px;padding-left: 8px;padding-top: 0px;margin-left: 15px;">
-                            <h1 class="fw-semibold d-flex flex-row align-items-center order-1" id="Bot-Name" style="margin: 0px;font-family: 'League Spartan', sans-serif;margin-top: 6px;color: #aaa7aa;">Socrates</h1>
-                            <p class="fw-normal d-flex flex-row order-2" id="Bot-Status" style="margin: 0px;padding-left: 4px;font-family: 'League Spartan', sans-serif;margin-top: -2px;color: #eb7e20;">Desconectado</p>
+                            <h1 class="fw-semibold d-flex flex-row align-items-center order-1" id="Bot-Name" style="margin: 0px;font-family: hedliner;margin-top: 6px;color: #aaa7aa;">Socrates</h1>
+                            <p class="fw-normal d-flex flex-row order-2" id="Bot-Status" style="margin: 0px;padding-left: 4px;margin-top: -2px;color: #eb7e20;">Desconectado</p>
                         </div>
                     </div>
                 </div>
-                <div class="container-fluid d-flex flex-column" id="Chat-BG" style="height: 92%;background: linear-gradient(#ffffff00 0%, #87939745 77%, #5f6f7581 86%, #1a3139e8 92%, #0a232b 100%), transparent;backdrop-filter: opacity(0.45) brightness(178%) contrast(200%) invert(100%);-webkit-backdrop-filter: opacity(0.45) brightness(178%) contrast(200%) invert(100%);">
+                <div class="container-fluid d-flex flex-column" id="Chat-BG" style="height: 92%;background: linear-gradient(#ffffff00 0%, #87939745 77%, #5f6f7581 85%, rgb(60,60,60) 90%, rgb(45,45,45) 92%, var(--bs-CR-gray-dark) 97%), transparent;backdrop-filter: brightness(167%) contrast(51%) invert(15%);-webkit-backdrop-filter: brightness(167%) contrast(51%) invert(15%);">
                     <div class="row flex-fill justify-content-center align-items-center order-2" id="Chat-Box">
                         <div class="col text-truncate d-sm-block d-md-block d-lg-block d-xl-block text-wrap" style="height: 100%;overflow-y: visible;">
                             <div class="row px-3 py-2" id="Empty-Feed" style="display: flex;">
                                 <div class="col d-flex d-xl-flex flex-column justify-content-center align-items-center align-self-center justify-content-xl-center align-items-xl-center" style="overflow: hidden;overflow-y: auto;min-height: 30.5rem;max-height: 30.5rem;height: auto;">
-                                    <div class="card border-0" id="EmptyF-BG" style="background: linear-gradient(#13131364 0%, #ffffff08), #253137dc;">
+                                    <div class="card border-0" id="EmptyF-BG" style="background: linear-gradient(#13131364 0%, #ffffff08), #0a0a0a9c">
                                         <div class="card-body text-center">
                                             <p class="card-text" style="color: #aaa7aa;">Escribe algo para charlar con Socrates</p>
-                                            <p class="card-text" style="font-size: 25px;color: #aaa7aa;"><strong>Cheetah Research</strong></p><img src="assets/img/Cheetah%20Paw%20Icon.svg" style="width: 60px;height: 60px;">
-                                            <p class="card-text" style="padding: 30px;"><span style="color: #eb7e20;">Pista: ¡Di Hola!</span></p>
+                                            <p class="card-text" style="font-family: hedliner;font-size: 25px;color: #aaa7aa;"><strong>Cheetah Research</strong></p><img src="assets/img/Cheetah%20Paw%20Icon.svg" style="width: 60px;height: 60px;">
+                                            <p class="card-text" style="font-family: hedliner;padding: 30px;"><span style="color: var(--bs-CR-orange);">Pista: ¡Di Hola!</span></p>
                                         </div>
                                     </div>
                                 </div>
@@ -121,9 +121,9 @@
                     </div>
                     <div class="row justify-content-center align-items-center align-content-center order-3" id="Type-Box" style="background: rgba(170,167,170,0.16);padding-top: 6px;padding-right: 5px;padding-bottom: 6px;padding-left: 5px;backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
                         <div class="col align-content-center" id="TypeB-Container" style="height: 100%;">
-                            <div class="row text-truncate" id="TypeB-BG" style="border-radius: 10px;background: #e05a30;">
-                                <div class="col-8 col-sm-8 col-md-8 col-lg-9 col-xl-8 col-xxl-9 p-0" style="height: 100%;"><textarea id="Message-Input" class="align-content-center border-0" placeholder="Escribir Mensaje..." style="outline: none; height: 100%;width: 100%;border-radius: 10px;resize: none;padding-left: 10px;background: #ffffff;color: #072934;font-family: 'IBM Plex Sans', sans-serif;"></textarea></div>
-                                <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-flex d-md-flex flex-fill justify-content-center align-items-center align-content-center p-0 col-1" id="btIMG-Cont" style="height: 100%;margin-right: 0px;border-top-left-radius: 10px;border-bottom-left-radius: 10px;"><button class="btn d-flex justify-content-center align-items-center align-content-center mx-auto" id="btIMG" type="button" style="border-radius: 10px;width: 100%;height: 100%;padding: 0px 0px;padding-right: 0px;position: relative;overflow: hidden;"><input type="file" accept="image/*" id="fileInput" style="display:none;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-image-fill" id="imageIcon" style="display: flex;">
+                            <div class="row text-truncate" id="TypeB-BG" style="border-radius: 10px;background: var(--bs-CR-gray-dark);">
+                                <div class="col-8 col-sm-8 col-md-8 col-lg-9 col-xl-8 col-xxl-9 p-0" style="height: 100%;"><textarea id="Message-Input" class="align-content-center border-0" placeholder="Escribir Mensaje..." style="outline: none; height: 100%;width: 100%;border-radius: 10px;resize: none;padding-left: 10px;background: #ffffff;box-shadow: inset 5px 5px 9px 1px #6d6d6d;color: #072934;"></textarea></div>
+                                <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-flex d-md-flex flex-fill justify-content-center align-items-center align-content-center p-0 col-1" id="btIMG-Cont" style="height: 100%;margin-right: 0px;border-top-left-radius: 10px;border-bottom-left-radius: 10px;"><button class="btn justify-content-center align-items-center align-content-center mx-auto" id="btIMG" type="button" style="border-radius: 10px;width: 100%;height: 100%;padding: 0px 0px;padding-right: 0px;position: relative;overflow: hidden; display: none;"><input type="file" accept="image/*" id="fileInput" style="display:none;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-image-fill" id="imageIcon" style="display: flex;">
                                             <path d="M.002 3a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-12a2 2 0 0 1-2-2V3zm1 9v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V9.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12zm5-6.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0"></path>
                                         </svg><img class="flash animated" id="imageInput" style="display:none;max-width:150%;object-fit:cover;position:absolute;"></button></div>
                                 <div class="col-auto col-sm-1 col-md col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-md-flex justify-content-md-end p-0" id="btSend-Cont" style="min-width: 50px;height: 100%;margin-right: 0px;position: static;"><button class="btn float-end h-100" id="btSend" type="button" style="border-radius: 10px;width: 100%;border-style: none;border-color: #2e2e2e;border-bottom-style: none;"><i class="fab fa-telegram-plane" id="btSend-Icon"></i></button></div>
