agregado link de recoleccion

--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -51,7 +51,7 @@
     </style>
 </head>
 
-<body class="d-flex flex-column" style="height: 100%;background: url(&quot;assets/img/Main%20BG.png&quot;) center / cover; backdrop-filter: brightness(167%) contrast(51%) invert(15%);" onload="loadInterviewer()">
+<body class="d-flex flex-column" style="height: 100%;background: url(&quot;assets/img/Main%20BG.png&quot;) center / cover; backdrop-filter: brightness(167%) contrast(51%) invert(15%);" onload="initializePage()">
     <div id="overlay" style="display: flex;">
         
     </div>
@@ -109,6 +109,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="Chat.js"></script>
+
 </body>
 
 </html>
