--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -161,6 +161,7 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="js/script_LanzarEstudio.js"></script>
+    <script src="js/Script_RecoleccionDeDatos.js"></script>
 </body>
 
 </html>
