--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -22,7 +22,7 @@
 </head>
 
 <body style="width: 100%;" onload="deleteFromLocStrg()">
-    <div class="text-center d-lg-flex justify-content-lg-center align-items-lg-center" style="background: var(--bs-black);height: 25vh;margin: 10px;border-radius: 3px;"><a class="navbar-brand align-items-center justify-content-xxl-end align-items-xxl-center sidebar-brand m-0" href="PaginaPrincipal.html">
+    <div class="text-center d-lg-flex justify-content-lg-center align-items-lg-center" style="background: var(--bs-black);height: 25vh;margin: 0px;border-radius: 3px;"><a class="navbar-brand align-items-center justify-content-xxl-end align-items-xxl-center sidebar-brand m-0" href="PaginaPrincipal.html">
 
         <img class="mx-auto d-none d-md-block large-image" 
          data-bs-toggle="tooltip" data-bss-tooltip 
@@ -31,14 +31,14 @@
 
         
     </a></div>
-    <div class="card" id="contentCard_PaginaOverview" style="margin: 10px;height: 100vh;padding: 10px; ">
-        <h1 style="color: var(--bs-body-bg);margin: 10px;background: var(--bs-primary);border-radius: 10px;padding: 05px;font-family: 'IBM Plex Sans', sans-serif;">SELECCIONAR ESTUDIO</h1>
-        <div class="list-group" id="listgrouptudies" style="margin: 10px;font-family: 'IBM Plex Sans', sans-serif;">
+    <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: 100vh;padding: 10px; border-radius: 3px;">
+        <h1 style="color: var(--bs-body-bg);margin: 10px;background: var(--bs-primary);border-radius: 3px;padding: 05px;font-family: 'hedliner', sans-serif;">SELECCIONAR ESTUDIO</h1>
+        <div class="list-group" id="listgrouptudies" style="margin: 10px;font-family: 'hedliner', sans-serif;border-radius: 3px;">
 
 
 
-        </div><button class="btn btn-primary" type="button" style="margin: 10px;width: 25%;font-weight: bold;font-family: 'IBM Plex Sans', sans-serif;" onclick="window.location.href='CreacionDeEstudio.html';">Crear Estudio</button>
-            <button class="btn btn-primary" type="button" style="margin: 10px;width: 25%;font-weight: bold;font-family: 'IBM Plex Sans', sans-serif;" onclick="logOut()">Cerrar Sesion</button>
+        </div><button class="btn btn-primary" type="button" style="margin: 10px;width: 25%;font-weight: bold;font-family: 'hedliner', sans-serif;border-radius: 3px;" onclick="window.location.href='CreacionDeEstudio.html';">Crear Estudio</button>
+            <button class="btn btn-primary" type="button" style="margin: 10px;width: 25%;font-weight: bold;font-family: 'hedliner', sans-serif;border-radius: 3px;" onclick="logOut()">Cerrar Sesion</button>
 
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
