--- a/Modulo De config/Encuesta.html
+++ b/Modulo De config/Encuesta.html
@@ -127,6 +127,7 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="js/ScriptSurv.js"></script>
+    <script src="js/Script_CheckSession.js"></script>
 
 </body>
 
