--- a/Modulo De config/CrearEncuestador.html
+++ b/Modulo De config/CrearEncuestador.html
@@ -82,6 +82,7 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="js/Script_CrearEncuestador.js"></script>
+    <script src="js/Script_CheckSession.js"></script>
 </body>
 
 </html>
