--- a/Modulo De config/HerramientasDelAdministrador.html
+++ b/Modulo De config/HerramientasDelAdministrador.html
@@ -94,6 +94,7 @@
     <script src="js/Script_ListNonActiveUser.js"></script>
     <script src="js/Script_ConcederAcceso.js"></script>
     <script src="js/Script_CheckSession.js"></script>
+    <script src="js/Script_ObtenerEstudios.js"></script>
 </body>
 
 </html>
