Links e imágenes ahora se pueden recibir del Encuestador con getMessage() y dentro de sendMessage() | LoadingMSG al finalizar encuesta arreglado | Color de ícono de chat vacío | Chat.css: Import Correcto de IBM League Spartan | Responsiveness.css: Anchors/Links | Hover.css y background de: Boton de Saludo inicial | Funciones de Prueba Eliminadas y código ordenado | Se quitó IBM League Spartan de Mensajes

--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -72,7 +72,7 @@
                         <div class="card border-0" id="EmptyF-BG" style="background: linear-gradient(#13131364 0%, #ffffff08), #0a0a0a9c;">
                             <div class="card-body text-center">
                                 <p class="card-text" style="color: #aaa7aa;">Escribe algo para charlar con</p>
-                                <p class="card-text" style="font-family: hedliner;font-size: 25px;color: #aaa7aa;"><strong>Cheetah Research</strong></p><img src="assets/img/Cheetah%20Paw%20Icon.svg" style="width: 60px;height: 60px;">
+                                <p class="card-text" style="font-family: hedliner;font-size: 25px;color: #aaa7aa;"><strong>Cheetah Research</strong></p><img src="assets/img/Cheetah%20Paw%20Icon.svg" style="width: 60px;height: 60px;filter: invert(70%);">
                                 <p class="card-text" style="padding: 30px;"><span style="font-family: hedliner;color: var(--bs-CR-orange);">Pista: ¡Di Hola!</span></p>
                             </div>
                         </div>
