Link a Página Principal Overview.html;Links de API cambiados | Responsiveness.css: Anchors/Links | Hover.css: Boton de Saludo inicial; Anchors/Links; Nav Bar Hover (Falta Filtros) | Se quitó IBM League Spartan de Mensajes | LoadingMSG al finalizar encuesta arreglado | Color de ícono de chat vacío | Código ordenado

--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/Features-Small-Icons-icons.css">
     <link rel="stylesheet" href="assets/css/custom-styles.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
+    <link rel="stylesheet" href="assets/css/Hover.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
     <script src="./Funcionalidad/AnalisisDeDatos.js"></script>
@@ -21,7 +22,7 @@
     <div id="wrapper">
         <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius:0px;border-bottom-right-radius: 0px;background: var(--bs-CR-black-dark);">
             <div class="container-fluid d-flex flex-column p-0">
-                <a class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="PaginaPrincipal.html" >
+                <a class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="Overview.html" >
                     <img style="height: auto;width: 230px;margin: -11px;margin-bottom: 0px; margin-top: 10px;" src="assets/img/NegroLogo.png" />
                 </a>
                 <div style="height: 30px;"></div>
@@ -30,15 +31,15 @@
                     <li class="nav-item" style="font-family: hedliner">
                         <a class="nav-link" href="Overview.html">
                             <i class="fas fa-window-maximize" style="font-size: 20px;color: var(--bs-CR-orange);"></i>
-                            <span style="font-family: hedliner;color: #ffffff;">PAGINA PRINCIPAL</span>
+                            <span style="font-family: hedliner;">PAGINA PRINCIPAL</span>
                         </a>
                     </li>
-                    <li class="nav-item dropdown" style="font-family: hedliner"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="font-family: hedliner;color: #ffffff;">Filtros&nbsp;</a>
+                    <li class="nav-item dropdown" style="font-family: hedliner"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="font-family: hedliner;">Filtros&nbsp;</a>
                         <div class="dropdown-menu" style="background: var(--bs-CR-gray);"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
                     </li>
-                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link active" href="AnalisisDeDatos.html"><i class="far fa-chart-bar" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;color: #ffffff;" >ANALISIS DE DATOS</span></a></li>
-                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="DetalledeRespuestas.html"><i class="far fa-newspaper" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;color: #ffffff;" >DETALLE DE RESPUESTAS</span></a></li>
-                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="ConversaContuData.html"><i class="far fa-comments" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;color: #ffffff;" >SOCRATES 🔎</span></a></li>
+                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link active" href="AnalisisDeDatos.html"><i class="far fa-chart-bar" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;" >ANALISIS DE DATOS</span></a></li>
+                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="DetalledeRespuestas.html"><i class="far fa-newspaper" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;" >DETALLE DE RESPUESTAS</span></a></li>
+                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="ConversaContuData.html"><i class="far fa-comments" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;" >SOCRATES 🔎</span></a></li>
                 </ul>
 
             </div>
