--- a/Modulo Analisis De Datos/ConversaContuData.html
+++ b/Modulo Analisis De Datos/ConversaContuData.html
@@ -53,14 +53,14 @@
     <div id="wrapper">
         <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius:0px;border-bottom-right-radius: 0px;background: var(--bs-CR-black-dark);">
             <div class="container-fluid d-flex flex-column p-0">
-                <a class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="Overview.html" >
+                <a class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="https://www.cheetah-research.com/analysis/MainPage" >
                     <img style="height: auto;width: 230px;margin: -11px;margin-bottom: 0px; margin-top: 10px;" src="assets/img/NegroLogo.png" />
                 </a>
                 <div style="height: 30px;"></div>
                 
                 <ul id="accordionSidebar" class="navbar-nav text-light" style="font-family: 'hedliner', sans-serif;">
                     <li class="nav-item" style="font-family: hedliner">
-                        <a class="nav-link" href="Overview.html">
+                        <a class="nav-link" href="https://www.cheetah-research.com/analysis/MainPage">
                             <i class="fas fa-window-maximize" style="font-size: 20px;color: var(--bs-CR-orange);"></i>
                             <span style="font-family: hedliner, sans-serif;">PAGINA PRINCIPAL</span>
                         </a>
@@ -68,9 +68,9 @@
                     <li class="nav-item dropdown" style="font-family: hedliner"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="font-family: hedliner, sans-serif;">Filtros&nbsp;</a>
                         <div class="dropdown-menu" style="background: var(--bs-CR-gray);"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
                     </li>
-                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="AnalisisDeDatos.html"><i class="far fa-chart-bar" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner, sans-serif;" >ANALISIS DE DATOS</span></a></li>
-                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="DetalledeRespuestas.html"><i class="far fa-newspaper" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner, sans-serif;" >DETALLE DE RESPUESTAS</span></a></li>
-                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link active" href="ConversaContuData.html"><i class="far fa-comments" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner, sans-serif;" >SOCRATES 🔎</span></a></li>
+                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href=" https://www.cheetah-research.com/analysis/DataAnalysis"><i class="far fa-chart-bar" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner, sans-serif;" >ANALISIS DE DATOS</span></a></li>
+                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="https://www.cheetah-research.com/analysis/AnswerDetails"><i class="far fa-newspaper" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner, sans-serif;" >DETALLE DE RESPUESTAS</span></a></li>
+                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link active" href="https://www.cheetah-research.com/analysis/Socrates"><i class="far fa-comments" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner, sans-serif;" >SOCRATES 🔎</span></a></li>
                 </ul>
 
             </div>
