--- a/Modulo Analisis De Datos/ConversaContuData.html
+++ b/Modulo Analisis De Datos/ConversaContuData.html
@@ -58,19 +58,16 @@
                 </a>
                 <div style="height: 30px;"></div>
                 
-                <ul id="accordionSidebar" class="navbar-nav text-light" style="font-family: 'hedliner', sans-serif;">
+                <ul id="accordionSidebar" class="navbar-nav text-light" style="font-family: hedliner;">
                     <li class="nav-item" style="font-family: hedliner">
                         <a class="nav-link" href="https://www.cheetah-research.com/analysis/MainPage">
                             <i class="fas fa-window-maximize" style="font-size: 20px;color: var(--bs-CR-orange);"></i>
-                            <span style="font-family: hedliner, sans-serif;">PAGINA PRINCIPAL</span>
+                            <span style="font-family: hedliner;">PAGINA PRINCIPAL</span>
                         </a>
                     </li>
-                    <li class="nav-item dropdown" style="font-family: hedliner"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="font-family: hedliner, sans-serif;">Filtros&nbsp;</a>
-                        <div class="dropdown-menu" style="background: var(--bs-CR-gray);"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                    </li>
-                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href=" https://www.cheetah-research.com/analysis/DataAnalysis"><i class="far fa-chart-bar" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner, sans-serif;" >ANALISIS DE DATOS</span></a></li>
-                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="https://www.cheetah-research.com/analysis/AnswerDetails"><i class="far fa-newspaper" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner, sans-serif;" >DETALLE DE RESPUESTAS</span></a></li>
-                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link active" href="https://www.cheetah-research.com/analysis/Socrates"><i class="far fa-comments" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner, sans-serif;" >SOCRATES 🔎</span></a></li>
+                    
+                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="https://www.cheetah-research.com/analysis/DataAnalysis"><i class="far fa-chart-bar" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;" >ANALISIS DE DATOS</span></a></li>
+                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="https://www.cheetah-research.com/analysis/Socrates"><i class="far fa-comments" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;" >SOCRATES 🔎</span></a></li>
                 </ul>
 
             </div>
