--- a/Modulo De config/register.html
+++ b/Modulo De config/register.html
@@ -16,13 +16,14 @@
     <link rel="stylesheet" href="assets/assets_accounts/css/LineAwesome.css">
     <link rel="stylesheet" href="assets/assets_accounts/fonts/line-awesome.min.css">
     <link rel="stylesheet" href="assets/assets_accounts/css/Features-Small-Icons-icons.css">
-    
+    <link rel="stylesheet" href="assets/css/untitled.css">
+
     <link rel="stylesheet" href="assets/assets_accounts/css/untitled.css">
     <link rel="stylesheet" href="assets/assets_accounts/css/Hover.css">
     <link rel="stylesheet" href="assets/assets_accounts/css/Responsiveness.css">
 </head>
 
-<body class="d-flex flex-column justify-content-center align-items-center bg-gradient-primary" style="width:100%;height:100%;background:var(--bs-primary);">
+<body class="d-flex flex-column justify-content-center align-items-center bg-gradient-primary" style="width:100%;height:100%;background:#C0601C;">
     <div class="container" style="z-index:1;position:absolute;">
         <div class="card border-0 shadow-lg o-hidden my-5">
             <div class="card-body p-0">
@@ -33,20 +34,20 @@
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
-                                <h4 class="text-dark mb-4" style="font-family:'League Spartan', sans-serif;font-weight:bold;">Solicita Acceso </h4>
+                                <h4 class="text-dark mb-4" style="font-family:'hedliner', sans-serif;font-weight:bold;">Solicita Acceso </h4>
                             </div>
-                            <p id="Error-RegEmail" style="font-size:1rem;margin-left:7px;font-family:'League Spartan', sans-serif;text-decoration:underline;color:red;display:none;"> Correo electrónico no válido</p>
-                            <form class="user" style="font-family:'IBM Plex Sans', sans-serif;" id="registerForm">
-                                <div class="mb-3" style="font-family:'IBM Plex Sans', sans-serif;"><input class="form-control form-control form-control form-control form-control-user" type="email" aria-describedby="emailHelp" autocomplete="on" id="InputEmail" inputmode="email" name="email" placeholder="Correo Electronico" required="" style="font-family:'IBM Plex Sans', sans-serif;"></div>
-                                <p id="Error-RegPassword" style="font-size:1rem;margin-left:7px;font-family:'League Spartan', sans-serif;text-decoration:underline;color:red;display:none;"> Las contraseñas no coinciden</p>
-                                <div class="row mb-3" style="font-family:'IBM Plex Sans', sans-serif;">
-                                    <div class="col-sm-6 mb-3 mb-sm-0" style="font-family:'IBM Plex Sans', sans-serif;"><input class="form-control form-control form-control form-control form-control-user" type="password" autocomplete="on" id="PasswordInput" minlength="8" name="password" placeholder="Contraseña" required="" style="font-family:'IBM Plex Sans', sans-serif;"></div>
-                                    <div class="col-sm-6" style="font-family:'IBM Plex Sans', sans-serif;"><input class="form-control form-control form-control form-control form-control-user" type="password" autocomplete="on" id="RepeatPasswordInput" minlength="8" name="password_repeat" placeholder="Repetir Contraseña" required="" style="font-family:'IBM Plex Sans', sans-serif;"></div>
-                                </div><button class="btn btn-primary btn-user w-100" id="SolicitarAccesoBTN" type="submit" style="font-family:'League Spartan', sans-serif;font-weight:bold;font-size:12.8px;">Solicitar Acceso</button>
-                                <hr style="font-family:'IBM Plex Sans', sans-serif;">
+                            <p id="Error-RegEmail" style="font-size:1rem;margin-left:7px;font-family:'hedliner', sans-serif;text-decoration:underline;color:red;display:none;"> Correo electrónico no válido</p>
+                            <form class="user" style="font-family:'hedliner', sans-serif;" id="registerForm">
+                                <div class="mb-3" style="font-family:'hedliner', sans-serif;"><input class="form-control form-control form-control form-control form-control-user" type="email" aria-describedby="emailHelp" autocomplete="on" id="InputEmail" inputmode="email" name="email" placeholder="Correo Electronico" required="" style="font-family:'hedliner', sans-serif;"></div>
+                                <p id="Error-RegPassword" style="font-size:1rem;margin-left:7px;font-family:'hedliner', sans-serif;text-decoration:underline;color:red;display:none;"> Las contraseñas no coinciden</p>
+                                <div class="row mb-3" style="font-family:'hedliner', sans-serif;">
+                                    <div class="col-sm-6 mb-3 mb-sm-0" style="font-family:'hedliner', sans-serif;"><input class="form-control form-control form-control form-control form-control-user" type="password" autocomplete="on" id="PasswordInput" minlength="8" name="password" placeholder="Contraseña" required="" style="font-family:'hedliner', sans-serif;"></div>
+                                    <div class="col-sm-6" style="font-family:'hedliner', sans-serif;"><input class="form-control form-control form-control form-control form-control-user" type="password" autocomplete="on" id="RepeatPasswordInput" minlength="8" name="password_repeat" placeholder="Repetir Contraseña" required="" style="font-family:'hedliner', sans-serif;"></div>
+                                </div><button class="btn btn-primary btn-user w-100" id="SolicitarAccesoBTN" type="submit" style="font-family:'hedliner', sans-serif;font-weight:bold;font-size:12.8px;">Solicitar Acceso</button>
+                                <hr style="font-family:'hedliner', sans-serif;">
                             </form>
-                            <div class="text-center" style="font-family:'IBM Plex Sans', sans-serif;"><a class="small" href="forgot-password.html" style="font-family:'IBM Plex Sans', sans-serif;">¿Olvidaste tu Contraseña?</a></div>
-                            <div class="text-center" style="font-family:'IBM Plex Sans', sans-serif;"><a class="small" href="login.html" style="font-family:'IBM Plex Sans', sans-serif;">¿Ya tienes una cuenta? Ingresa aqui</a></div>
+                            <div class="text-center" style="font-family:'hedliner', sans-serif;"><a class="small" href="https://www.cheetah-research.ai/reset_password/" style="font-family:'hedliner', sans-serif;">¿Olvidaste tu Contraseña?</a></div>
+                            <div class="text-center" style="font-family:'hedliner', sans-serif;"><a class="small" href="https://www.cheetah-research.ai/login/" style="font-family:'hedliner', sans-serif;">¿Ya tienes una cuenta? Ingresa aqui</a></div>
                         </div>
                     </div>
                 </div>
@@ -60,8 +61,8 @@
             </div>
             <div class="row" style="width:100%;height:45%;background:#eb7e20;">
                 <div class="col d-flex flex-column justify-content-center align-items-center align-content-center">
-                    <h1 style="font-family:'IBM Plex Sans', sans-serif;color:#2e3e43;margin-bottom:10px;">¡Perfecto! </h1>
-                    <p class="fw-normal text-center d-flex" id="SuccessC-Text" style="font-family:'League Spartan', sans-serif;color:#ffffff;margin-bottom:5px;">Se ha registrado con éxito</p><a id="Link-Login" href="#">Regresar al Login</a>
+                    <h1 style="font-family:'hedliner', sans-serif;color:#2e3e43;margin-bottom:10px;">¡Perfecto! </h1>
+                    <p class="fw-normal text-center d-flex" id="SuccessC-Text" style="font-family:'hedliner', sans-serif;color:#ffffff;margin-bottom:5px;">Se ha registrado con éxito</p><a id="Link-Login" href="#">Regresar al Login</a>
                 </div>
             </div>
         </div>
