cambios a href link

--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -22,7 +22,7 @@
 </head>
 
 <body style="width: 100%;" onload="deleteFromLocStrg()">
-    <div class="text-center d-lg-flex justify-content-lg-center align-items-lg-center" style="background: var(--bs-black);height: 25vh;margin: 0px;border-radius: 3px;"><a class="navbar-brand align-items-center justify-content-xxl-end align-items-xxl-center sidebar-brand m-0" href="PaginaPrincipal.html">
+    <div class="text-center d-lg-flex justify-content-lg-center align-items-lg-center" style="background: var(--bs-black);height: 25vh;margin: 0px;border-radius: 3px;"><a class="navbar-brand align-items-center justify-content-xxl-end align-items-xxl-center sidebar-brand m-0" href="https://cheetah-research.ai/home/">
 
         <img class="mx-auto d-none d-md-block large-image" 
          data-bs-toggle="tooltip" data-bss-tooltip 
@@ -37,7 +37,7 @@
 
 
 
-        </div><button class="btn btn-primary" type="button" style="margin: 10px;width: 25%;font-weight: bold;font-family: 'hedliner', sans-serif;border-radius: 3px;" onclick="window.location.href='./configuration/study';">Crear Estudio</button>
+        </div><button class="btn btn-primary" type="button" style="margin: 10px;width: 25%;font-weight: bold;font-family: 'hedliner', sans-serif;border-radius: 3px;" onclick="window.location.href='https://cheetah-research.ai/configuration/study/';">Crear Estudio</button>
             <button class="btn btn-primary" type="button" style="margin: 10px;width: 25%;font-weight: bold;font-family: 'hedliner', sans-serif;border-radius: 3px;" onclick="logOut()">Cerrar Sesion</button>
 
     </div>
